# Bentley

./: .gitignore  Cargo.toml  README.md
config/: bentley.toml.example  ui.toml
crates/bentley-app/: Cargo.toml
crates/bentley-app/src/: main.rs
crates/bentley-core/: Cargo.toml
crates/bentley-core/src/: config.rs  context.rs  lib.rs  view.rs
crates/bentley-services/: Cargo.toml
crates/bentley-services/src/: airplay.rs  audio.rs  lib.rs  spotify.rs
crates/bentley-utils/: Cargo.toml
crates/bentley-utils/src/: assets.rs  lib.rs  timing.rs
crates/bentley-views/: Cargo.toml
crates/bentley-views/src/: lib.rs  lyrics.rs  now_playing.rs  snake.rs  tetris.rs  visualizer.rs  wall_art.rs
docs/: architecture.md  execution-plan.md  setup-summary.md
system/: bentley.service  uxplay-wrapper.sh  uxplay.service  weston.ini
