[workspace]
resolver = "2"
members = [
    "crates/bentley-app",
    "crates/bentley-core",
    "crates/bentley-views",
    "crates/bentley-services",
    "crates/bentley-utils",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Bentley Contributors"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Rendering
wgpu = "0.20"
winit = "0.30"
bytemuck = { version = "1.14", features = ["derive"] }

# Async runtime
tokio = { version = "1.40", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.20"

# Image processing
image = "0.25"

# Audio processing (future)
hound = "3.5"

